# cmake-qt-vcpkg-vulkan

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.adoc  environment.yml  lib.cpp  lib.hpp  main.comp  main.cpp  main.frag  main.hpp  main.py  main.vert  python.cpp  python.hpp  vcpkg.json
